@@ -1,2 +1,3 @@
 "kBKBookmarkTitleProperty" = "Feeds";
 "kArticleHeadlineProperty" = "Headline";
+"kArticleGroupProperty" = "Group";
