@@ -2,6 +2,9 @@
 Mollusk Changelog
 =============
 
+Nov-23-2006 Yen-Ju Chen <yjchenx at gmail>
+	* Display feed name if group is selected.
+
 Nov-18-2006 Yen-Ju Chen <yjchenx at gmail>
 	* Rename to Mollusk.
 
